--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <script type="text/javascript" src="lastfm.api.md5.js"></script>
-    <script type="text/javascript" src="lastfm.api.js"></script>
-    <script type="text/javascript" src="lastfm.api.cache.js"></script>
+    <script type="text/javascript" src="js/lastfm.api.md5.js"></script>
+    <script type="text/javascript" src="js/lastfm.api.js"></script>
+    <script type="text/javascript" src="js/lastfm.api.cache.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.js"></script>
-    <script type="text/javascript" src="login.js"></script>
-    <script type="text/javascript" src="post-rock.js"></script>
+
+    <script type="text/javascript" src="js/login.js"></script>
+    <script type="text/javascript" src="js/post-rock.js"></script>
 </head>
 <body>
     last.fm
